@@ -21,7 +21,8 @@
 		</license>
 		<license>
 			<name>GPLv2 with Classpath exception</name>
-			<url>http://www.gnu.org/software/classpath/license.html</url>
+			<url>http://www.gnu.org/software/
+			classpath/license.html</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
@@ -35,15 +36,18 @@
 	<properties>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>11</maven.compiler.release>
-		<javafx.version>15</javafx.version>
-		<metadata-extractor.version>2.15.0</metadata-extractor.version>
+		<maven.compiler.release>16</maven.compiler.release>
+		<javafx.version>17.0.1</javafx.version>
+		<metadata-extractor.version>2.16.0</metadata-extractor.version>
 		<vlcj.version>4.6.0</vlcj.version>
 		<jcodec.version>0.2.5</jcodec.version>
 		<imageio-jpeg.version>3.5</imageio-jpeg.version>
 		<imageio-tiff.version>3.5</imageio-tiff.version>
 		<sqlite-jdbc.version>3.28.0</sqlite-jdbc.version>
 		<slf4j.version>1.7.32</slf4j.version>
+		<maven.compiler.source>16</maven.compiler.source>
+		<maven.compiler.target>16</maven.compiler.target>
+
 	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
@@ -61,11 +65,6 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-base</artifactId>
-			<version>${javafx.version}</version>
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-swing -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
@@ -116,12 +115,12 @@
 		<!-- <version>2.13.3</version> -->
 		<!-- </dependency> -->
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.slf4j</groupId> -->
-<!-- 			<artifactId>slf4j-log4j12</artifactId> -->
-<!-- 			<version>1.7.30</version> -->
-<!-- 			<scope>test</scope> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.slf4j</groupId> -->
+		<!-- <artifactId>slf4j-log4j12</artifactId> -->
+		<!-- <version>1.7.30</version> -->
+		<!-- <scope>test</scope> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>org.xerial</groupId>
@@ -192,12 +191,22 @@
 			<plugin>
 				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
-				<version>0.0.4</version>
+				<version>0.0.8</version>
 				<configuration>
 					<!-- <arg>javafx.graphics/com.sun.glass.ui=org.openjfx.Main</arg> -->
 					<mainClass>com.girbola.Main</mainClass>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>--illegal-access=permit</argLine>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
